Revision history for {{$dist->name}}

{{$NEXT}}

0.02004314 2011-10-28T14:54:15Z
 [Dependencies]
 - changed: runtime requires Moose 0.84 -> 0.90
 - dropped: runtime requires MooseX::Has::Sugar

 [Features]
 - Added (private) accessors for everything moose can do on the ::Private
   core. This is soley to discourage consumers from accesing the hash
   internals directly to provide better encapsulation. Maybe one day
   ::Private will be entirely replaced with XS and you want it to remain
   working.
 - Added a basic Type Library, Data::Couplet::Types

0.02004313 2011-10-28T14:24:40Z
 - Maintenance release, no non-packaging changes in this release.

 [Dependencies::New]
 - Data::Dumper

 [Dependencies::Removed]
 - Test::use::ok
 - ok

 [Internals]
 - packages now set $VERSION without 'our'
 - packages now have $AUTHORITY

 [Packaging]
 - Much needed regeneration of Build.PL
 - Changes file migrated to CPAN::Changes format.
 - Copyright License updated ( Date, Indentation, Address )
 - No longer ships a Makefile.PL ( EUMM Sucks )
 - perlcriticrc -> perlcritic.rc
 - Moved to Git versioning
 - moved to Author::KENTNL
 - Repository metadata more featureful and uses https://
 - license is now 'perl_5' not 'perl'
 - dependencies now properly qualified.
 - now ship x_authority.
 - Pod overhaulled and rewoven.
 - Ship .perltidyrc
 - Tidy all code.

 [Tests]
 - added version reporting test.
 - t/* moved to xt/*
 - hand-written xt/* replaced by generated ones.
 - xt:added release/cpan-changes
 - xt:added release/distmeta
 - xt:added release/eol
 - xt:added release/kwalitee
 - xt:added release/pod-coverage
 - xt:added release/pod-syntax

0.02004312 2009-09-13T12:20:00Z
 - Moved last_id to last_index ( was a bad name anyway )
 - Added ->indices to the KeyCount plug. 
 - Added KeyPlug tests.
 - This is a minor release to tweak -last_index prior to S::F release

0.02004302 2009-09-13T02:06:26Z
 - Added a Ease-Of-Use subclassing utility.