@@ -25,4 +25,5 @@ MooseX::Types::Moose = 0.19 ; 0.18 is bad
 ;namespace::autoclean = 0
 ;Carp = 0
 ;Data::Dump = 0
+Package::Strictures = 0.01001313
 
