@@ -1,0 +1,6 @@
+[ Data::Couplet ]
+WARN_FATAL = 1
+
+[ Data::Couplet::Private ] 
+WARN_FATAL = 1
+
